# graph_visualizer

./: Cargo.toml  README.md
examples/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: graph.rs  graph_app.rs  graph_errors.rs  graph_flows.rs  graph_parser.rs  graph_renderer.rs  main.rs  quad_tree.rs
src/graph_app/: app_widgets.rs  error_dialog.rs  graph_window.rs  open_dialog.rs  save_dialog.rs
