[package]
name = "graph_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.3", package = "gtk4" }
relm4 = "0.2"
relm4-macros = "0.2"
relm4-components = "0.2"
rand = "0.8"
femtovg = "0.2.8"
glutin = "0.27.0"
winit = "0.25.0"
resource = "0.5.0"