[package]
name = "graph_visualizer"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
relm4 = "0.4.4"
relm4-macros = "0.4.4"
relm4-components = "0.4.4"
rand = "0.8.5"
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "8df076f1" }
glutin = { version = "0.29.0", default-features = false, features = ["x11"] }
winit = { version = "0.27.1", default-features = false, features = ["x11"] }
resource = "0.5.0"
thiserror = "1.0.32"